domba - wsfy form grid

--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
                                 <h3>
                                     Kontakt informacije:
                                 </h3>
+                                <p>
+                                    Trebate nam dati Vaše podatke kako bih Vas mogli kontaktirati. Vaše podatke nećemo djeliti nikome.
+                                </p>
                             </div>
                             <div class="form-group">
                                 <label class="sr-only" for="login-email">Vaše ime</label>
@@ -219,12 +222,10 @@
                             </div>
                             <div class="form-group">
                                 <label class="sr-only" for="login-password">Vaš broj telefona</label>
-                                <input type="tel" class="form-control" id="login-password" placeholder="Lozinka">
+                                <input type="tel" class="form-control" id="login-password" placeholder="Broj telefona">
                             </div>
 
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
-                            </div>
+
 
                         </div>
 
@@ -233,10 +234,16 @@
                                 <h3>
                                     Opišite ono šta Vam je potrebno:
                                 </h3>
+                                <p>
+                                    Npr. Sarajevo, dvosoban stan do trećeg sprata, do 60 kvadrata...
+                                </p>
                             </div>
                             <div class="form-group">
                                 <label class="sr-only" for="login-email">Vaša e-mail adresa</label>
-                                <input type="email" class="form-control" id="login-email" placeholder="E-mail adresa">
+                                <textarea class="form-control" rows="3" placeholder="Opišite nekretninu koja Vam je potrebna"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
                             </div>
                         </div>
                     </div>
