domba - help structure

--- a/index.html
+++ b/index.html
@@ -243,8 +243,28 @@
                                 <label class="sr-only" for="login-email">Vaša e-mail adresa</label>
                                 <textarea class="form-control" rows="3" placeholder="Opišite nekretninu koja Vam je potrebna"></textarea>
                             </div>
+                            <div class="wsfy-menu-subtitle">
+                                <h3>
+                                    Kako da Vas kontaktiramo:
+                                </h3>
+                            </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
+                                <div class="checkbox-inline">
+                                    <label>
+                                        <input type="checkbox" value="">
+                                        Putem E-maila
+                                    </label>
+                                </div>
+                                <div class="checkbox-inline">
+                                    <label>
+                                        <input type="checkbox" value="">
+                                        Na telefon
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="form-group wsfy-submit">
+                                <button type="submit" class="btn btn-login btn-invert">Pošaljite upit</button>
                             </div>
                         </div>
                     </div>
