--- a/app/index.html
+++ b/app/index.html
@@ -148,11 +148,11 @@
 
             <div class="main-menu-links-section animated">
                 <ul>
-                    <li><a href="#">O nama</a></li>
+                    <li><a href="about-us.html">O nama</a></li>
                     <li><a href="help.html">Pomoć</a></li>
                     <li><a href="agents-list.html">Agenti</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="#">Uslovi korištenja</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="terms.html">Uslovi korištenja</a></li>
                 </ul>
             </div>
 
@@ -243,7 +243,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="sr-only" for="login-email">Vaša e-mail adresa</label>
-                                <textarea class="form-control" rows="3" placeholder="Opišite nekretninu koja Vam je potrebna"></textarea>
+                                <textarea class="form-control" rows="7" placeholder="Opišite nekretninu koja Vam je potrebna"></textarea>
                             </div>
                             <div class="wsfy-menu-subtitle">
                                 <h3>
@@ -332,9 +332,17 @@
                             <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
                         </div>
                     </form>
-                    <button class="btn btn-block btn-fb" onclick="loginWithFacebook()">
-                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                        Prijavite se pomoću Facebook-a
+                    <h4>
+                        Prijavite se pomoću:
+                    </h4>
+                    <button class="btn btn-fb btn-lg" onclick="loginWithFacebook()">
+                        <i class="fa fa-facebook-f" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-tw btn-lg" onclick="loginWithFacebook()">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-gm btn-lg" onclick="loginWithFacebook()">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
                     </button>
                 </div>
 
@@ -353,8 +361,8 @@
                         <div class="form-group">
                             <!--<div class="input-group">-->
                                 <label class="sr-only" for="register-username">Vaše korisničko ime</label>
+                                <span class="input-group-btn">
                                 <input type="text" class="form-control" id="register-username" placeholder="Korisničko ime">
-                                <!--<span class="input-group-btn">-->
                                     <!--<button class="btn btn-default" type="button" data-toggle="modal" data-target="#nickname-modal"><i class="fa fa-info-circle" aria-hidden="true"></i></button>-->
                                     <!--<a tabindex="0" class="btn btn-default" role="button" data-toggle="popover" data-placement="left" data-trigger="focus" data-content="-->
                                         <!--Korisničko ime je vaša identifikacija na sajtu i prikazuje se:-->
@@ -364,15 +372,10 @@
                                         <!--<i class="fa fa-info-circle" aria-hidden="true"></i>-->
                                     <!--</a>-->
 
-                                    <!--<button class="btn btn-default" type="button" data-container="body" data-toggle="popover" data-placement="left" data-content="-->
-                                        <!--Korisničko ime je vaša identifikacija na sajtu i prikazuje se:-->
-                                        <!--kao dio kontakt podataka,-->
-                                        <!--kod komunikacije sa drugim korisnicima,-->
-                                        <!--iznad liste sa vašim oglasima.-->
-                                        <!--Ne treba da sadrži povjerljive podatke ili neprimjerene izraze!">-->
-                                        <!--<i class="fa fa-info-circle" aria-hidden="true"></i>-->
-                                    <!--</button>-->
-                                <!--</span>-->
+                                    <button class="btn btn-default" type="button" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+                                        <i class="fa fa-info-circle" aria-hidden="true"></i>
+                                    </button>
+                                </span>
                             <!--</div>-->
                             <!--<button type="button" class="helper-question-i" data-toggle="modal" data-target="#nickname-modal" data-whatever="@mdo"><i class="fa fa-info-circle" aria-hidden="true"></i></button>-->
                             <!--<a class="helper-question" href="">Zašto je korisničko ime važno?</a>-->
@@ -405,9 +408,17 @@
                             <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
                         </div>
                     </form>
-                    <button class="btn btn-block btn-fb" onclick="loginWithFacebook()">
-                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                        Registruj se pomoću Facebook-a
+                    <h4>
+                        Registrujte se pomoću:
+                    </h4>
+                    <button class="btn btn-fb btn-lg" onclick="loginWithFacebook()">
+                        <i class="fa fa-facebook-f" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-tw btn-lg" onclick="loginWithFacebook()">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-gm btn-lg" onclick="loginWithFacebook()">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
                     </button>
                 </div>
 
@@ -483,7 +494,7 @@
                 <a href="index.html">
                     <?xml version="1.0" encoding="UTF-8"?>
                     <!--<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">-->
-                    <svg class="logo animated fadeOutUp" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"viewBox="0 0 3474 1219"
+                    <svg class="logo animated fadeInDown" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"viewBox="0 0 3474 1219"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
                  <defs>
                   <style type="text/css">
