--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,6 @@
 
 </head>
 <body>
-
 <!--    Main menu
         section variables: less/my-variables.less
         variables prefix: @main-menu-
@@ -585,19 +584,12 @@
         variables prefix: @hero-
         section style: less/jumbotron.less
 -->
-
-<!--    Hero section
-        section variables: less/my-variables.less
-        variables prefix: @hero-
-        section style: less/jumbotron.less
--->
-
 <section class="hero-small">
     <div class="overlay"></div>
     <div class="wrapper-outer">
         <div class="wrapper">
             <div class="hero-small-title">
-                <h1>Kako Vam možemo pomoći?</h1>
+                <h1>Blog</h1>
             </div>
         </div>
     </div>
