--- a/terms.html
+++ b/terms.html
@@ -33,7 +33,6 @@
 
 </head>
 <body>
-
 <!--    Main menu
         section variables: less/my-variables.less
         variables prefix: @main-menu-
@@ -585,19 +584,12 @@
         variables prefix: @hero-
         section style: less/jumbotron.less
 -->
-
-<!--    Hero section
-        section variables: less/my-variables.less
-        variables prefix: @hero-
-        section style: less/jumbotron.less
--->
-
 <section class="hero-small">
     <div class="overlay"></div>
     <div class="wrapper-outer">
         <div class="wrapper">
             <div class="hero-small-title">
-                <h1>Kako Vam možemo pomoći?</h1>
+                <h1>Uslovi korištenja</h1>
             </div>
         </div>
     </div>
@@ -607,71 +599,45 @@
     <div class="overlay"></div>
     <div class="wrapper-outer">
         <div class="wrapper">
-            <div class="help-accordion">
-                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingOne">
-                            <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Korisnički račun
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingTwo">
-                            <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Agencije
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingThree">
-                            <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Oglasi
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="content-main">
+                Član 1. Uslovi - Uslovi upotrebe portala DOM.ba prestavljaju pravni dogovor izmedju konačnog korisnika (fizičkih i pravnih osoba) i firme (DOM.ba) za upotrebu portala DOM.ba i sa njim povezane djelatnosti.
+                Djelatnosti portala DOM.ba koje su dostupne na internetu na domenu http://dom.ba su namjenjene svim koji imaju pristup internetu i primjenjuju uslove koristenja portala DOM.ba.
+                Korisnik portala Dom.ba se veže da će usluge portala koristiti isključivo u privatne, nekomercijalne svrhe u skladu zakonom.
+                DOM.ba ne naplaćuje bilo kakvu naknadu za postavljanje oglasa na virtuelnom oglasnom prostoru obrazloženom u prethodnom stavu, niti to čini u vidu provizije po izvršenoj prodaji nepokretnosti iz oglasa.
+                Portal DOM.ba korisniku omogućava pregled upisanih i objavu vlastitih nekretnina kako u BIH tako i u cijelom Svijetu.
+
+
+                Član 2. Registracija - U svrhu oglašavanja na web sajtu DOM.ba, korisnik se obavezuje registrovati, te tom prilikom popuniti svoje lične podatke, kao i podatke za kontakt. Korisnik je odgovoran i garantuje za istinitost i tačnost popunjenih podataka.
+
+
+                Član 3. Oglašavanje - Korisnik se slaže, da će kod unosa oglasa poštovati sledeća pravila:
+                - oglas mora biti napisan na lokalnom jeziku,
+                - opis oglasa mora biti istinit, pravilan i aktuelan,
+                - opis oglasa ne smije biti nezakonit, štetan, sporan i uvredljiv,
+                - opis oglasa ne smije biti identičan oglas (u potpunosti prepisan oglas drugog korisnika), koji je upisan na portalu DOM.ba,
+                - opis oglasa se mora objaviti iskljucivo kao ponuda nekretnina (prodaja, iznajmljivanje, holiday smještaj..),
+                - cjelokupan sadrzaj oglasa, sav tekst, slike, audio i video materijal ostaje u vlasnistvu portala DOM.ba Kad korisnik pristupa portalu DOM.ba ili ga kako drugacije koristi pristaje da koristi portal po navedenim uslovima.
+                Korisnik koji se ne slaze sa navedenim uslovima portala DOM.ba i sa njim povezanim djelatnostima ne može se služiti portalom DOM.ba
+
+
+                Član 4. Garancija -
+                DOM.ba ne garantuje:
+
+                - tačnost, potpunost i/ili istinitost oglasa ili teksta u njima, kao ni kvalitet, sigurnost i legalnost ponuđenih proizvoda i usluga
+                - nadležnost druge strane u zaključivanju sporazuma, ispravnost, potpunost i tačnost ličnih podataka oglašivača, koje je isti koristio na ispravan način u poslovanju
+                - da na stranicama neće biti grešaka i/ili da će funkcionisati bez prekida u svakom trenutku
+                - da će treća strana legalno koristiti stranice DOM.ba sve vrijeme.
+                DOM.ba garantuje:
+
+                - podaci na DOM.ba su zaštićeni Zakonom o autorskom pravu i srodnim pravima u BiH. Autorska prava koja se odnose na DOM.ba uključuju tekstove, njihovo oblikovanje, grafičke sadržaje i druge slikovne prikaze koji pripadaju DOM.ba te dozvolu pružatelja usluge i/ili oglašivača.
+
+                Član 5. Sudska nadležnost - Portal DOM.ba zadržava pravo promjene ovih uslova korištenja, u bilo kom trenutku i bez najave. O promjeni uslova korištenja možete steći povremenom posjetom u podnožju portala DOM.ba (uslovi koristenja). Samim korišćenjem portala DOM.ba pristajete na ove uslove i nikakav poseban pristanak od strane korisnika nije potreban da bi ga ovi uslovi obavezivali. Poznavanje ovih uslova korišćenja sajta u svakom trenutku predstavlja obavezu korisnika sajta.
+
+
+                U Prijedoru 2015. DOM.ba
             </div>
-            <div class="help-faq">
-                <div class="wrapper">
-                    <div class="content-subtitle">
-                        <h4>
-                            Aktuelni članci
-                        </h4>
-                    </div>
-                    <div class="help-faq-list">
-                        <div class="list-group">
-                            <a href="#" class="list-group-item">
-                                Kako se registrovati?
-                            </a>
-                            <a href="#" class="list-group-item">Netačno korisničko ime/lozinka</a>
-                            <a href="#" class="list-group-item">Kako objaviti oglas</a>
-                            <a href="#" class="list-group-item">Uređivanje oglasa</a>
-                            <a href="#" class="list-group-item">Izdvajanje oglasa</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="content-sidebar">
+
             </div>
         </div>
     </div>
