--- a/app/terms.html
+++ b/app/terms.html
@@ -602,44 +602,81 @@
     <div class="wrapper-outer">
         <div class="wrapper">
             <div class="content-main">
-                Član 1. Uslovi - Uslovi upotrebe portala DOM.ba prestavljaju pravni dogovor izmedju konačnog korisnika (fizičkih i pravnih osoba) i firme (DOM.ba) za upotrebu portala DOM.ba i sa njim povezane djelatnosti.
-                Djelatnosti portala DOM.ba koje su dostupne na internetu na domenu http://dom.ba su namjenjene svim koji imaju pristup internetu i primjenjuju uslove koristenja portala DOM.ba.
-                Korisnik portala Dom.ba se veže da će usluge portala koristiti isključivo u privatne, nekomercijalne svrhe u skladu zakonom.
-                DOM.ba ne naplaćuje bilo kakvu naknadu za postavljanje oglasa na virtuelnom oglasnom prostoru obrazloženom u prethodnom stavu, niti to čini u vidu provizije po izvršenoj prodaji nepokretnosti iz oglasa.
-                Portal DOM.ba korisniku omogućava pregled upisanih i objavu vlastitih nekretnina kako u BIH tako i u cijelom Svijetu.
+                <h3>
+                    Član 1. Uslovi
+                </h3>
+                <p>
+                    Uslovi upotrebe portala DOM.ba prestavljaju pravni dogovor izmedju konačnog korisnika (fizičkih i pravnih osoba) i firme (DOM.ba) za upotrebu portala DOM.ba i sa njim povezane djelatnosti.
+                    Djelatnosti portala DOM.ba koje su dostupne na internetu na domenu http://dom.ba su namjenjene svim koji imaju pristup internetu i primjenjuju uslove koristenja portala DOM.ba.
+                    Korisnik portala Dom.ba se veže da će usluge portala koristiti isključivo u privatne, nekomercijalne svrhe u skladu zakonom.
+                    DOM.ba ne naplaćuje bilo kakvu naknadu za postavljanje oglasa na virtuelnom oglasnom prostoru obrazloženom u prethodnom stavu, niti to čini u vidu provizije po izvršenoj prodaji nepokretnosti iz oglasa.
+                    Portal DOM.ba korisniku omogućava pregled upisanih i objavu vlastitih nekretnina kako u BIH tako i u cijelom Svijetu.
+                </p>
+                <h3>
+                    Član 2. Registracija
+                </h3>
+                <p>
+                    U svrhu oglašavanja na web sajtu DOM.ba, korisnik se obavezuje registrovati, te tom prilikom popuniti svoje lične podatke, kao i podatke za kontakt. Korisnik je odgovoran i garantuje za istinitost i tačnost popunjenih podataka.
+                </p>
+                <h3>
+                    Član 3. Oglašavanje
+                </h3>
+                <p>
+                    Korisnik se slaže, da će kod unosa oglasa poštovati sledeća pravila:
+                </p>
+                <ul>
+                    <li>oglas mora biti napisan na lokalnom jeziku,</li>
+                    <li>opis oglasa mora biti istinit, pravilan i aktuelan,</li>
+                    <li>opis oglasa ne smije biti nezakonit, štetan, sporan i uvredljiv,</li>
+                    <li>opis oglasa ne smije biti identičan oglas (u potpunosti prepisan oglas drugog korisnika), koji je upisan na portalu DOM.ba,</li>
+                    <li>opis oglasa se mora objaviti iskljucivo kao ponuda nekretnina (prodaja, iznajmljivanje, holiday smještaj..),</li>
+                    <li>
+                        cjelokupan sadrzaj oglasa, sav tekst, slike, audio i video materijal ostaje u vlasnistvu portala DOM.ba Kad korisnik pristupa portalu DOM.ba ili ga kako drugacije koristi pristaje da koristi portal po navedenim uslovima.
+                    </li>
+                </ul>
+                <p>
+                    Korisnik koji se ne slaze sa navedenim uslovima portala DOM.ba i sa njim povezanim djelatnostima ne može se služiti portalom DOM.ba
+                </p>
 
-
-                Član 2. Registracija - U svrhu oglašavanja na web sajtu DOM.ba, korisnik se obavezuje registrovati, te tom prilikom popuniti svoje lične podatke, kao i podatke za kontakt. Korisnik je odgovoran i garantuje za istinitost i tačnost popunjenih podataka.
-
-
-                Član 3. Oglašavanje - Korisnik se slaže, da će kod unosa oglasa poštovati sledeća pravila:
-                - oglas mora biti napisan na lokalnom jeziku,
-                - opis oglasa mora biti istinit, pravilan i aktuelan,
-                - opis oglasa ne smije biti nezakonit, štetan, sporan i uvredljiv,
-                - opis oglasa ne smije biti identičan oglas (u potpunosti prepisan oglas drugog korisnika), koji je upisan na portalu DOM.ba,
-                - opis oglasa se mora objaviti iskljucivo kao ponuda nekretnina (prodaja, iznajmljivanje, holiday smještaj..),
-                - cjelokupan sadrzaj oglasa, sav tekst, slike, audio i video materijal ostaje u vlasnistvu portala DOM.ba Kad korisnik pristupa portalu DOM.ba ili ga kako drugacije koristi pristaje da koristi portal po navedenim uslovima.
-                Korisnik koji se ne slaze sa navedenim uslovima portala DOM.ba i sa njim povezanim djelatnostima ne može se služiti portalom DOM.ba
-
-
-                Član 4. Garancija -
-                DOM.ba ne garantuje:
-
-                - tačnost, potpunost i/ili istinitost oglasa ili teksta u njima, kao ni kvalitet, sigurnost i legalnost ponuđenih proizvoda i usluga
-                - nadležnost druge strane u zaključivanju sporazuma, ispravnost, potpunost i tačnost ličnih podataka oglašivača, koje je isti koristio na ispravan način u poslovanju
-                - da na stranicama neće biti grešaka i/ili da će funkcionisati bez prekida u svakom trenutku
-                - da će treća strana legalno koristiti stranice DOM.ba sve vrijeme.
-                DOM.ba garantuje:
-
-                - podaci na DOM.ba su zaštićeni Zakonom o autorskom pravu i srodnim pravima u BiH. Autorska prava koja se odnose na DOM.ba uključuju tekstove, njihovo oblikovanje, grafičke sadržaje i druge slikovne prikaze koji pripadaju DOM.ba te dozvolu pružatelja usluge i/ili oglašivača.
-
-                Član 5. Sudska nadležnost - Portal DOM.ba zadržava pravo promjene ovih uslova korištenja, u bilo kom trenutku i bez najave. O promjeni uslova korištenja možete steći povremenom posjetom u podnožju portala DOM.ba (uslovi koristenja). Samim korišćenjem portala DOM.ba pristajete na ove uslove i nikakav poseban pristanak od strane korisnika nije potreban da bi ga ovi uslovi obavezivali. Poznavanje ovih uslova korišćenja sajta u svakom trenutku predstavlja obavezu korisnika sajta.
-
-
-                U Prijedoru 2015. DOM.ba
+                <h3>
+                    Član 4. Garancija
+                </h3>
+                <p>
+                    DOM.ba ne garantuje:
+                </p>
+                <ul>
+                    <li>tačnost, potpunost i/ili istinitost oglasa ili teksta u njima, kao ni kvalitet, sigurnost i legalnost ponuđenih proizvoda i usluga</li>
+                    <li>nadležnost druge strane u zaključivanju sporazuma, ispravnost, potpunost i tačnost ličnih podataka oglašivača, koje je isti koristio na ispravan način u poslovanju</li>
+                    <li>da na stranicama neće biti grešaka i/ili da će funkcionisati bez prekida u svakom trenutku</li>
+                    <li>da će treća strana legalno koristiti stranice DOM.ba sve vrijeme.</li>
+                </ul>
+                <p>
+                    DOM.ba garantuje:
+                </p>
+                <ul>
+                    <li>podaci na DOM.ba su zaštićeni Zakonom o autorskom pravu i srodnim pravima u BiH. Autorska prava koja se odnose na DOM.ba uključuju tekstove, njihovo oblikovanje, grafičke sadržaje i druge slikovne prikaze koji pripadaju DOM.ba te dozvolu pružatelja usluge i/ili oglašivača.</li>
+                </ul>
+                <h3>
+                    Član 5. Sudska nadležnost
+                </h3>
+                <p>
+                    Portal DOM.ba zadržava pravo promjene ovih uslova korištenja, u bilo kom trenutku i bez najave. O promjeni uslova korištenja možete steći povremenom posjetom u podnožju portala DOM.ba (uslovi koristenja). Samim korišćenjem portala DOM.ba pristajete na ove uslove i nikakav poseban pristanak od strane korisnika nije potreban da bi ga ovi uslovi obavezivali. Poznavanje ovih uslova korišćenja sajta u svakom trenutku predstavlja obavezu korisnika sajta.
+                </p>
+                <br>
+                <br>
+                <p class="text-center">
+                    U Prijedoru 2015. DOM.ba
+                </p>
             </div>
             <div class="content-sidebar">
+                <h4>
+                    Sadržaj
+                </h4>
+                <ul>
+                    <li>
 
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
