domba- public profile

--- a/app/index.html
+++ b/app/index.html
@@ -361,21 +361,12 @@
                         <div class="form-group">
                             <!--<div class="input-group">-->
                                 <label class="sr-only" for="register-username">Vaše korisničko ime</label>
-                                <span class="input-group-btn">
-                                <input type="text" class="form-control" id="register-username" placeholder="Korisničko ime">
-                                    <!--<button class="btn btn-default" type="button" data-toggle="modal" data-target="#nickname-modal"><i class="fa fa-info-circle" aria-hidden="true"></i></button>-->
-                                    <!--<a tabindex="0" class="btn btn-default" role="button" data-toggle="popover" data-placement="left" data-trigger="focus" data-content="-->
-                                        <!--Korisničko ime je vaša identifikacija na sajtu i prikazuje se:-->
-                                        <!--kao dio kontakt podataka,-->
-                                        <!--kod komunikacije sa drugim korisnicima,-->
-                                        <!--iznad liste sa vašim oglasima">-->
-                                        <!--<i class="fa fa-info-circle" aria-hidden="true"></i>-->
-                                    <!--</a>-->
+                                <input type="text" class="form-control" id="register-username" placeholder="Korisničko ime" data-toggle="tooltip" title="                                        Korisničko ime je vaša identifikacija na sajtu i prikazuje se:
+                                        kao dio kontakt podataka,
+                                        kod komunikacije sa drugim korisnicima,
+                                        iznad liste sa vašim oglasima">
 
-                                    <button class="btn btn-default" type="button" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
-                                        <i class="fa fa-info-circle" aria-hidden="true"></i>
-                                    </button>
-                                </span>
+
                             <!--</div>-->
                             <!--<button type="button" class="helper-question-i" data-toggle="modal" data-target="#nickname-modal" data-whatever="@mdo"><i class="fa fa-info-circle" aria-hidden="true"></i></button>-->
                             <!--<a class="helper-question" href="">Zašto je korisničko ime važno?</a>-->
@@ -1067,7 +1058,7 @@
 
             <div class="new-list">
                 <article class="new-list-item grid">
-                    <a href="#">
+                    <a href="public-user.html">
                         <div class="add-image">
                             <img class="img-responsive" src="img/featured/1-1.jpg" alt="">
                         </div>
@@ -1100,7 +1091,7 @@
                 </article>
 
                 <article class="new-list-item grid">
-                    <a href="#">
+                    <a href="public-user.html">
                         <div class="add-image">
                             <img class="img-responsive" src="img/featured/1-1.jpg" alt="">
                         </div>
